--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,9 @@ address {
 .sec-three {
   background-color: #ffffff;
 }
+.team {
+  background-color: #f4f4fd;
+}
+span {
+  text-color: #2e2f42;
+}
