--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,8 @@ address {
   color: #2e2f42;
   font-weight: 500;
   letter-spacing: 0.02em;
+  font-size: 16px;
+  line-height: 1.5;
 }
 .nav-link:hover {
   color: #404bbf;
@@ -140,6 +142,7 @@ header {
   letter-spacing: 0.03em;
   line-height: 1.17;
   color: #4d5ae5;
+  text-transform: uppercase;
 }
 .footer-logo-p {
   color: #f4f4fd;
